--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,24 +15,24 @@
   <body>
    <header class="header">
       <div class="header__bar row">
-        <h1 class="grid-6"><a href="/">肉留まり</a></h1>
+        <div class="grid-6"> <a href="/"> <img src="/assets/nikudomari_rogo.PNG"style="width: 400px; height: 400px;" ></a></div>
           <%# <% if user_signed_in? %>
-          <%# <div class="user_nav grid-6">
-                <span><%= current_user.nickname %>
+           <div class="user_nav grid-6">
+                 <%# <span><%= "current_user.nickname" %>  
              <ul class="user__info"> 
               <li>
-                <%# <%= link_to "マイページ", "/users/#{current_user.id}" %> 
-                <%# <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>  
-              <%# </li>  %>
+                <%= link_to "マイページ", "#" %> 
+                <%= link_to "ログアウト", "#" %> 
+               </li> 
             </ul>
           </span>
             <%= link_to "投稿する", "newのパス", class: "post" %>
           </div>
         <%# <% else %> 
-          <div class="grid-6">
+          <%# <div class="grid-6"> %>
             <%# <%= link_to "ログイン", new_user_session_path, class: "post" %>
             <%# <%= link_to "新規登録", new_user_registration_path, class: "post" %>  
-          </div>
+          <%# </div> %>
         <%# <% end %> 
       </div>
     </header>
