サイドバー設定
トップページの雛形

--- a/app/views/selling_prices/_side_bar.html.erb
+++ b/app/views/selling_prices/_side_bar.html.erb
@@ -1,1 +1,19 @@
-＜サイドバー＞
+  <div class = "side_group" >
+      <div class="side_button"> 
+         <%= link_to "#" do %>
+           <%= image_tag("/assets/price_button.PNG", alt: "販売価格ボタン") %>
+         <% end %>
+      </div>
+      <div class="side_button"> 
+         <%= link_to "#" do %>
+           <%= image_tag("/assets/budomali_button.PNG", alt: "歩留まり原価計算ボタン") %>
+         <% end %>
+       </div>
+      <div class="side_button"> 
+         <%= link_to "#" do %>
+           <%= image_tag("/assets/user_all_button.PNG", alt: "登録店舗一覧") %>
+         <% end %>
+       </div>
+  </div>
+
+
