--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+
    <header class="header">
       <div class="header__bar row">
         <div class="grid-6"> <a href="/"> <img src="/assets/nikudomari_rogo.PNG"style="width: 400px; height: 400px;" ></a></div>
@@ -21,12 +22,15 @@
                  <%# <span><%= "current_user.nickname" %>  
              <ul class="user__info"> 
               <li>
-                <%= link_to "マイページ", "#" %> 
-                <%= link_to "ログアウト", "#" %> 
+               <%= link_to "#" do %>
+                <%= image_tag("/assets/tenpo_mypage_button.PNG", alt: "マイページ") %>
+                <% end %>
+                <%= link_to "#" do %>
+                <%= image_tag("/assets/logout_button.PNG", alt: "ログアウト") %>
+                <% end %>
                </li> 
             </ul>
-          </span>
-            <%= link_to "投稿する", "newのパス", class: "post" %>
+          <%# </span> %>
           </div>
         <%# <% else %> 
           <%# <div class="grid-6"> %>
