--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
    <header class="header">
       <div class="header__bar row">
-        <div class="grid-6"> <a href="/"> <img src="/assets/nikudomari_rogo.PNG"style="width: 400px; height: 400px;" ></a></div>
+      <div class="grid-6"> <a href="/"> <img src="/assets/nikudomari_rogo.PNG"style="width: 25vw; height: 25vh;" id="root_button" ></a></div>
           <%# <% if user_signed_in? %>
            <div class="user_nav grid-6">
                  <%# <span><%= "current_user.nickname" %>  
