--- a/app/views/selling_prices/_side_bar.html.erb
+++ b/app/views/selling_prices/_side_bar.html.erb
@@ -1,6 +1,6 @@
   <div class = "side_group" >
       <div class="side_button"> 
-         <%= link_to "#" do %>
+         <%= link_to new_selling_price_path do %>
            <%= image_tag("/assets/price_button.PNG", alt: "販売価格ボタン") %>
          <% end %>
       </div>
