--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,3 +43,18 @@ align-items: center;
   list-style: none;
   display: flex;
 }
+
+.user_nav_grid-6{
+  font-size: 25px;
+  border: 4px solid #ff0000; /* 赤い枠線 */
+  color: #000000; /* 黒い文字色 */
+  display: flex;
+  
+}
+.store-name {
+  position: relative;
+  display: inline-block;
+  padding: 10px ,0,0,10px;
+  background-color: #ff0000;
+
+}
