--- a/app/views/cuts/new.html.erb
+++ b/app/views/cuts/new.html.erb
@@ -1,1 +1,161 @@
-<h1>cutsのnew</h1>
+<div class="items-sell-contents">
+  <header class="items-sell-header">
+    <%= link_to image_tag('/assets/nikudomari_rogo.PNG' , size: '185x50'), "/" %>
+  </header>
+    <div class="items-sell-main">
+    <h2 class="items-sell-title">商品の情報を入力</h2>
+  <%# ここにミートテーブルへの保存する情報 %>
+
+</div>
+
+  <div class="items-sell-main">
+    <h2 class="items-sell-title">肉の処理後のgを入力</h2>
+    <%= form_with model: @item, local: true do |f| %>
+  
+  <%# エラーメッセージ %>
+      <%= render partial: 'shared/error_messages', locals: { model: @cut }%>
+
+    <%# 商品画像 %>
+    <%# <div class="img-upload">
+      <div class="weight-bold-text">
+        商品画像
+        <span class="indispensable">必須</span>
+      </div>
+      <div class="click-upload">
+        <p>
+          クリックしてファイルをアップロード
+        </p>
+        <%= f.file_field ":image", id:"item-image" %>
+      <%# </div>
+    </div>  %>
+    <%# /商品画像 %>
+    <%# 商品名と商品説明 %>
+    <div class="new-items">
+      <div class="weight-bold-text">
+        肉の名前
+        <span class="indispensable">必須</span>
+      </div>
+      <%= f.text_area :cut_name, class:"items-text", id:"item-name", placeholder:"肉のブランド名や部位名（必須 40文字まで)", maxlength:"40" %>
+    
+   <%# 追加項目 %>
+       <div class="weight-bold-text">
+        特上部位
+        <span class="indispensable">必須</span>
+      </div>
+      <%= f.text_area :high_portion, class:"items-text", id:"item-name", placeholder:"特上部位のgを入力" %>
+      <div class="items-explain">
+        <div class="weight-bold-text">
+        上部位
+          <span class="indispensable" >必須</span>
+        </div>
+        <%= f.text_area :good_portion, class:"items-text", id:"item-info", placeholder:"上部位のgを入力" %>
+      </div>
+  <div class="weight-bold-text">
+        並部位
+        <span class="indispensable">必須</span>
+      </div>
+      <%= f.text_area :normal_portion, class:"items-text", id:"item-name", placeholder:"並部位のgを入力" %>
+      <div class="items-explain">
+        <div class="weight-bold-text">
+        ランチ用等悪い部位
+          <span class="indispensable" >必須</span>
+        </div>
+        <%= f.text_area :bad_portion, class:"items-text", id:"item-info", placeholder:"ランチ用等のgを入力" %>
+      </div>
+      <div class="weight-bold-text">
+        ミンチ部位
+        <span class="indispensable">必須</span>
+      </div>
+      <%= f.text_area :minced_portion, class:"items-text", id:"item-name", placeholder:"ミンチ部位のgを入力" %>
+      <div class="items-explain">
+        <div class="weight-bold-text">
+        ロス
+          <span class="indispensable" >必須</span>
+        </div>
+        <%= f.text_area :loss_portion, class:"items-text", id:"item-info", placeholder:"皮やリンパ等のロスのgを入力" %>
+      </div>
+       <div class="items-explain">
+        <div class="weight-bold-text">
+          販売可能部位の総量
+          <span class="indispensable" >必須</span>
+        </div>
+        <%= f.text_area :yield, class:"items-text", id:"item-info", placeholder:"ここに計算で出した総量引く各項目の数字を表示できる様にする" %>
+      </div>
+  <%# 追加項目 %>
+
+    </div>
+    <%# /商品名と商品説明 %>
+
+ 
+   
+    <%# 販売価格 %>
+    <div class="sell-price">
+      <div class="weight-bold-text question-text">
+        <span>販売価格<br>(¥300〜9,999,999)</span>
+        <a class="question" href="#">?</a>
+      </div>
+      <div>
+        <div class="price-content">
+          <div class="price-text">
+            <span>価格</span>
+            <span class="indispensable">必須</span>
+          </div>
+          <span class="sell-yen">¥</span>
+          <%= f.text_field ":item_price", class:"price-input", id:"item-price", placeholder:"例）300" %>
+        </div>
+        <div class="price-content">
+          <span>販売手数料 (10%)</span>
+          <span>
+            <span id='add-tax-price'></span>円
+          </span>
+        </div>
+        <div class="price-content">
+          <span>販売利益</span>
+          <span>
+            <span id='profit'></span>円
+          </span>
+        </div>
+      </div>
+    </div>
+    <%# /販売価格 %>
+
+    <%# 注意書き %>
+    <div class="caution">
+      <p class="sentence">
+        <a href="#">禁止されている出品、</a>
+        <a href="#">行為</a>
+        を必ずご確認ください。
+      </p>
+      <p class="sentence">
+        またブランド品でシリアルナンバー等がある場合はご記載ください。
+        <a href="#">偽ブランドの販売</a>
+        は犯罪であり処罰される可能性があります。
+      </p>
+      <p class="sentence">
+        また、出品をもちまして
+        <a href="#">加盟店規約</a>
+        に同意したことになります。
+      </p>
+    </div>
+    <%# /注意書き %>
+    <%# 下部ボタン %>
+    <div class="sell-btn-contents">
+      <%= f.submit "出品する" ,class:"sell-btn" %>
+      <%=link_to 'もどる', root_path, class:"back-btn" %>
+    </div>
+    <%# /下部ボタン %>
+  </div>
+  <% end %>
+
+  <footer class="items-sell-footer">
+    <ul class="menu">
+      <li><a href="#">プライバシーポリシー</a></li>
+      <li><a href="#">フリマ利用規約</a></li>
+      <li><a href="#">特定商取引に関する表記</a></li>
+    </ul>
+    <%= link_to image_tag('/assets/nikudomari_rogo.PNG' , size: '185x50'), "/" %>
+    <p class="inc">
+      ©︎Furima,Inc.
+    </p>
+  </footer>
+</div>
