--- a/app/views/selling_prices/_side_bar.html.erb
+++ b/app/views/selling_prices/_side_bar.html.erb
@@ -5,7 +5,7 @@
          <% end %>
       </div>
       <div class="side_button"> 
-         <%= link_to  new_cut_path do %>
+         <%= link_to  new_meat_path do %>
            <%= image_tag("/assets/budomali_button.PNG", alt: "歩留まり原価計算ボタン") %>
          <% end %>
        </div>
