--- a/app/views/meats/new.html.erb
+++ b/app/views/meats/new.html.erb
@@ -8,7 +8,7 @@
   <div class="items-sell-main">
    <%#登録した肉で計算ボタン%>
      <div class="sell-btn-contents">
-    <%=link_to '登録した肉で計算', new_cut_path, class:"back-btn" %>
+    <%=link_to '登録した肉で計算', meats_path, class:"back-btn" %>
   </div>
 <%#//登録した肉で計算ボタン%>
     <h2 class="items-sell-title">肉のブランド登録</h2>
