登録肉の一覧表示ページ

--- a/app/views/meats/index.html.erb
+++ b/app/views/meats/index.html.erb
@@ -3,6 +3,10 @@
   <div class= meat_content>
       <span class="name">
         <%= meat.meat_brand %>
+         <%= meat.prefecture_id %>   <%# 都道府県の名前を表示できる様に %>
+          <%= meat.meat_name %>
+             <%= meat.total_weight %><%="g"%>
+              <%= meat.cost_price %><%="円"%>
         <%# ここに登録した肉の情報のidを一つづつ入れる %>
       </span>
     </div>
