コミット忘れ

--- a/app/views/meats/index.html.erb
+++ b/app/views/meats/index.html.erb
@@ -7,7 +7,11 @@
           <%= meat.meat_name %>
              <%= meat.total_weight %><%="g"%>
               <%= meat.cost_price %><%="円"%>
+
         <%# ここに登録した肉の情報のidを一つづつ入れる %>
+
+        <%= link_to '詳細', meat_path(meat.id), method: :get %>
+        <%= link_to 'この肉で計算', meat_path(meat.id), method: :get %>
       </span>
     </div>
   <% end %>
